--- a/src/components/Form/components/Gradient/components/Angle.scss
+++ b/src/components/Form/components/Gradient/components/Angle.scss
@@ -1,5 +1,7 @@
+@import '~styles/variables.scss';
+
 .Angle {
-  background: var(--color-primary);;
+  background: $color-primary;
   bottom: -12px;
   height: 24px;
   left: 9px;
@@ -9,7 +11,7 @@
   &Value {
     background: #f9f9f9;
     background: linear-gradient(90deg, rgba(0 , 0, 0, 0) 0%, rgba(249,249,249,1) 25%, rgba(249,249,249,1) 75%, rgba(0 , 0, 0, 0) 100%);
-    color: var(--color-primary);
+    color: $color-primary;
     font-size: 14px;
     font-weight: 700;
     height: 20px;
