--- a/src/components/Form/components/Image/Image.scss
+++ b/src/components/Form/components/Image/Image.scss
@@ -1,3 +1,5 @@
+@import '~styles/variables.scss';
+
 .Root {
   align-items: center;
   display: flex;
@@ -5,5 +7,9 @@
 
   & > *:not(:first-child) {
     margin: 20px 0 0;
+
+    @media #{$desktop-small} {
+      margin: 13px 0 0;
+    }
   }
 }
