--- a/src/components/Form/components/Select/Select.scss
+++ b/src/components/Form/components/Select/Select.scss
@@ -1,3 +1,5 @@
+@import '~styles/variables.scss';
+
 .Root {
   position: relative;
 
@@ -183,7 +185,7 @@
 
 .Trigger {
   align-items: center;
-  background: var(--color-primary);
+  background: $color-primary;
   border-radius: 4px;
   display: flex;
   flex: 0 0 28px;
