--- a/src/components/Tabs/components/Item.scss
+++ b/src/components/Tabs/components/Item.scss
@@ -1,3 +1,5 @@
+@import '~styles/variables.scss';
+
 .Root {
   background: transparent;
   border: 0;
@@ -24,7 +26,7 @@
       }
 
       .Label {
-        color: var(--color-primary);
+        color: $color-primary;
       }
     }
   }
