--- a/src/views/Search/Search.scss
+++ b/src/views/Search/Search.scss
@@ -1,3 +1,5 @@
+@import '~styles/variables.scss';
+
 .Root {
   display: flex;
   flex: 1 1 auto;
@@ -149,7 +151,7 @@
 
 .Spinner {
   animation: spin 1s infinite linear;
-  border: 4px solid var(--color-primary);
+  border: 4px solid $color-primary;
   border-top-color: transparent;
   border-radius: 100%;
   height: 24px;
@@ -168,6 +170,10 @@
 }
 
 @keyframes spin {
-  from { transform: rotate(0deg); }
-  to {transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
