--- a/src/views/Search/components/Item.scss
+++ b/src/views/Search/components/Item.scss
@@ -1,3 +1,5 @@
+@import '~styles/variables.scss';
+
 .Root {
   align-items: center;
   display: flex;
@@ -9,7 +11,7 @@
 
   &:hover {
     .Title {
-      color: var(--color-primary);
+      color: $color-primary;
     }
   }
 }
