--- a/src/views/Screenshots/components/List.scss
+++ b/src/views/Screenshots/components/List.scss
@@ -1,3 +1,5 @@
+@import '~styles/variables.scss';
+
 .Root {
   display: flex;
   flex-wrap: wrap;
@@ -8,5 +10,12 @@
     height: 220px;
     margin: 8px;
     width: 128px;
+
+    @media #{$desktop-small} {
+      flex: 0 0 75px;
+      width: 75px;
+      height: 133px;
+      margin: 6px;
+    }
   }
 }
