--- a/src/views/Smartphone/components/Mockup/Mockup.scss
+++ b/src/views/Smartphone/components/Mockup/Mockup.scss
@@ -1,3 +1,5 @@
+@import '~styles/variables.scss';
+
 .Root {
   display: flex;
   flex-wrap: wrap;
@@ -8,5 +10,12 @@
     height: 212px;
     margin: 16px;
     width: 104px;
+
+    @media #{$desktop-small} {
+      flex: 0 0 60px;
+      height: 122px;
+      margin: 15px;
+      width: 60px;
+    }
   }
 }
