Add logout action.

--- a/src/template/templates/Template3/Template3.scss
+++ b/src/template/templates/Template3/Template3.scss
@@ -23,6 +23,7 @@
   filter: blur(20px);
   height: 100%;
   left: 0;
+  overflow: visible !important;
   position: absolute !important;
   top: 28px;
   width: 100%;
