--- a/src/containers/Plans/Plans.scss
+++ b/src/containers/Plans/Plans.scss
@@ -1,3 +1,5 @@
+@import '~styles/breakpoints';
+
 .Root {
   align-items: center;
   display: flex;
@@ -45,16 +47,24 @@
 
       .List {
         height: 425px;
-        margin: 64px 0 0;
+        margin: 28px 0 0;
         transition: all .4s;
+
+        @include breakpoint(desktop) {
+          margin: 64px 0 0;
+        }
       }
 
       .Period {
         height: 60px;
-        margin: 60px 0 0;
+        margin: 24px 0 0;
         opacity: 1;
         visibility: visible;
         transition: all .4s;
+
+        @include breakpoint(desktop) {
+          margin: 60px 0 0;
+        }
       }
 
       .Price {
