--- a/src/containers/Plans/components/Item.scss
+++ b/src/containers/Plans/components/Item.scss
@@ -1,3 +1,5 @@
+@import '~styles/breakpoints';
+
 .Root {
   background-image: linear-gradient(196deg, transparent, transparent);
   border-radius: 14px;
@@ -6,6 +8,10 @@
   position: relative;
   transition: all .4s;
   text-align: center;
+
+  @include breakpoint(laptop) {
+    height: 290px;
+  }
 
   &:hover {
     .Button {
@@ -124,6 +130,14 @@
   width: 120px;
   z-index: 10;
 
+
+  @include breakpoint(laptop) {
+    font-size: 10px;
+    height: 28px;
+    left: calc(50% - 41px);
+    width: 82px;
+  }
+
   &:focus {
     outline: none;
   }
@@ -160,9 +174,14 @@
 
 .Count {
   font-size: 12px;
-  font-weight: 700;
+  font-weight: 600;
   letter-spacing: .7px;
   opacity: .6;
+
+  @include breakpoint(laptop) {
+    font-size: 9px;
+    letter-spacing: .5px;
+  }
 }
 
 .Info {
@@ -182,6 +201,15 @@
 
   &:not(:first-child) {
     margin: 12px 0 0;
+
+    @include breakpoint(laptop) {
+      margin: 6px 0 0;
+    }
+  }
+
+  @include breakpoint(laptop) {
+    font-size: 9px;
+    letter-spacing: .2px;
   }
 }
 
@@ -192,6 +220,11 @@
   flex-direction: column;
   justify-content: center;
   margin: -16px 0 0;
+
+  @include breakpoint(laptop) {
+    font-size: 9px;
+    letter-spacing: .5px;
+  }
 }
 
 .Price {
@@ -199,6 +232,12 @@
   font-size: 40px;
   letter-spacing: -.4px;
   margin: 24px 0 0;
+
+  @include breakpoint(laptop) {
+    font-size: 28px;
+    letter-spacing: -.3px;
+    margin: 16px 0 0;
+  }
 }
 
 .Title {
@@ -208,6 +247,12 @@
   font-weight: 700;
   letter-spacing: .8px;
   padding: 32px 0 16px;
+
+  @include breakpoint(laptop) {
+    font-size: 12px;
+    letter-spacing: .6px;
+    padding: 20px 0 12px;
+  }
 }
 
 .Unit {
@@ -219,6 +264,11 @@
   opacity: .3;
   position: relative;
   top: -16px;
+
+  @include breakpoint(laptop) {
+    font-size: 15px;
+    letter-spacing: 0;
+  }
 }
 
 .Count,
