--- a/src/containers/Plans/containers/PriceList.scss
+++ b/src/containers/Plans/containers/PriceList.scss
@@ -1,3 +1,5 @@
+@import '~styles/breakpoints';
+
 .Root {
   align-items: center;
   display: flex;
@@ -6,14 +8,27 @@
   margin: 64px 0 0;
   max-width: 960px;
 
+  @include breakpoint(laptop) {
+    height: auto;
+    max-width: 680px;
+  }
+
   & > * {
     flex: 0 0 264px;
+
+    @include breakpoint(laptop) {
+      flex: 0 0 160px;
+    }
   }
 
   &HasPrice {
     height: 252px;
     margin: 0;
     transition: all .4s;
+
+    @include breakpoint(laptop) {
+      height: 180px;
+    }
   }
 }
 
