--- a/src/components/Form/components/Select/Select.scss
+++ b/src/components/Form/components/Select/Select.scss
@@ -1,3 +1,5 @@
+@import '~styles/breakpoints';
+
 .Root {
   position: relative;
 
@@ -65,10 +67,18 @@
         border-radius: 6px;
         height: 50px;
         padding: 0 20px;
+
+        @include breakpoint(laptop) {
+          height: 34px;
+        }
       }
 
       .Dropdown {
         top: 56px;
+
+        @include breakpoint(laptop) {
+          top: 40px;
+        }
       }
 
       .Input {
@@ -142,6 +152,11 @@
   text-overflow: ellipsis;
   width: 100%;
   white-space: nowrap;
+
+  @include breakpoint(laptop) {
+    font-size: 10px;
+    letter-spacing: .2px;
+  }
 
   &:focus {
     outline: none;
