--- a/src/components/Form/components/Input.scss
+++ b/src/components/Form/components/Input.scss
@@ -82,7 +82,7 @@
   width: 100%;
 
   @include breakpoint(laptop) {
-    font-size: 10px;
+    font-size: 14px;
     letter-spacing: .2px;
   }
 
@@ -98,4 +98,9 @@
   font-weight: 500;
   margin: 0 0 0 8px;
   padding: 0 0 0 8px;
+
+  @include breakpoint(laptop) {
+    font-size: 14px;
+    letter-spacing: .2px;
+  }
 }
