--- a/src/components/Form/components/Textarea.scss
+++ b/src/components/Form/components/Textarea.scss
@@ -1,3 +1,5 @@
+@import '~styles/breakpoints';
+
 .Root {
   &Is {
     &ReadOnly {
@@ -14,7 +16,7 @@
   border-radius: 4px;
   color: #aeb2ba;
   font-family: inherit;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: inherit;
   height: 160px;
   letter-spacing: .6px;
@@ -31,5 +33,10 @@
   &:focus {
     background: #ffffff;
     box-shadow: 0 12px 20px rgba(0, 0, 0, .04);
+  }
+
+  @include breakpoint(laptop) {
+    font-size: 14px;
+    letter-spacing: .2px;
   }
 }
