--- a/src/views/Domain/containers/common.scss
+++ b/src/views/Domain/containers/common.scss
@@ -1,3 +1,5 @@
+@import '~styles/breakpoints.scss';
+
 .Actions {
   margin: 16px 0 0;
 }
@@ -16,4 +18,8 @@
 
 .Textarea {
   height: 300px;
+
+  @include breakpoint(laptop) {
+    height: 200px;
+  }
 }
