--- a/src/template/templates/Template6/Template6.scss
+++ b/src/template/templates/Template6/Template6.scss
@@ -6,6 +6,13 @@
   overflow: scroll;
 }
 
+.Content {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  max-width: 540px;
+}
+
 .Copyright {
   max-height: 16px;
 
