--- a/src/template/templates/Template7/Template7.scss
+++ b/src/template/templates/Template7/Template7.scss
@@ -28,14 +28,50 @@
   width: 100%;
 }
 
+.Copyright {
+  &Text {
+    overflow: hidden;
+  }
+}
+
 .Description {
   &Text {
     overflow: hidden;
   }
 }
 
+.Footer {
+  align-items: center;
+  border-top: 1px solid #f0f0f0;
+  display: flex;
+  height: 120px;
+  justify-content: center;
+  width: 100%;
+
+  & > div {
+    justify-content: space-between;
+  }
+}
+
+.Header {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 0;
+  width: 100%;
+
+  &Right {
+    display: flex;
+  }
+}
+
 .Hr {
-  background-image: linear-gradient(to right, rgba(250, 250, 250, 0) 3%, #b4b5b5 50%, rgba(250, 250, 250, 0));
+  background-image: linear-gradient(
+    to right,
+    rgba(250, 250, 250, 0) 3%,
+    #b4b5b5 50%,
+    rgba(250, 250, 250, 0)
+  );
   height: 1px;
   width: 100%;
 }
