--- a/src/template/templates/Template7/styles/laptop.scss
+++ b/src/template/templates/Template7/styles/laptop.scss
@@ -7,6 +7,10 @@
 
         &List {
           margin: 12px 0 0;
+
+          & > * {
+            flex: 0 0 292px;
+          }
         }
 
         .Description {
@@ -122,6 +126,7 @@
 
       .Quote {
         margin: 84px 0;
+        max-width: 786px !important;
 
         &Author {
           margin: 20px 0 0;
@@ -157,7 +162,7 @@
 
       .Smartphone {
         border-radius: 40px;
-        box-shadow: 0 5px 34px 0 rgba(0, 0, 0, 0.06);
+        box-shadow: 0 5px 34px 0 rgba(0, 0, 0, .06);
         height: 476px;
         width: 236px;
 
@@ -178,7 +183,7 @@
 
         &Text {
           font-size: 38px;
-          letter-spacing: 0.4px;
+          letter-spacing: .4px;
           line-height: 60px;
         }
       }
