--- a/src/template/components/Background.scss
+++ b/src/template/components/Background.scss
@@ -16,7 +16,7 @@
       }
 
       .Focus {
-        opacity: .8;
+        opacity: 0.8;
       }
     }
   }
@@ -34,21 +34,22 @@
   left: 0;
   position: absolute;
   top: 0;
-  transition: all .4s;
+  transition: all 0.4s;
   width: 100%;
   z-index: 1;
 }
 
 .Link {
-  background: rgba(0, 0, 0, .8);
+  background: rgba(0, 0, 0, 0.8);
   border-radius: 0 8px 0 0;
   bottom: 0;
   color: #fff;
+  left: 0;
   opacity: 0;
   padding: 8px 16px;
   position: absolute;
   text-decoration: none;
-  transition: all .2s;
+  transition: all 0.2s;
   z-index: 10;
 
   &Is {
