--- a/src/template/templates/Template7/styles/laptop.scss
+++ b/src/template/templates/Template7/styles/laptop.scss
@@ -53,10 +53,14 @@
         }
 
         .Content {
-          margin: 80px 0 0 260px;
+          flex: 0 440px;
+          margin: 80px 0 0 0;
         }
 
         .Smartphone {
+          border-radius: 40px;
+          box-shadow: 0 3px 21px 0 rgba(0, 0, 0, 0.06);
+          flex: 0 0 252px;
           height: 512px;
           width: 252px;
 
@@ -75,6 +79,7 @@
         }
 
         .Wrapper {
+          justify-content: space-evenly;
           padding: 40px 0 0;
         }
       }
@@ -162,7 +167,7 @@
 
       .Smartphone {
         border-radius: 40px;
-        box-shadow: 0 5px 34px 0 rgba(0, 0, 0, .06);
+        box-shadow: 0 5px 34px 0 rgba(0, 0, 0, 0.06);
         height: 476px;
         width: 236px;
 
@@ -183,7 +188,7 @@
 
         &Text {
           font-size: 38px;
-          letter-spacing: .4px;
+          letter-spacing: 0.4px;
           line-height: 60px;
         }
       }
