--- a/src/template/templates/Template6/Template6.scss
+++ b/src/template/templates/Template6/Template6.scss
@@ -1,7 +1,6 @@
 @import './styles/mobile.scss';
 @import './styles/tablet.scss';
 
-
 .Root {
   overflow: scroll;
 }
@@ -58,6 +57,7 @@
   height: 140px;
   justify-content: space-between;
   max-width: 100%;
+  padding: 0 100px;
   position: absolute;
   width: 100%;
 }
@@ -67,6 +67,7 @@
   display: flex;
   height: 140px;
   justify-content: space-between;
+  padding: 0 100px;
   position: absolute;
   top: 0;
   width: 100%;
@@ -75,7 +76,7 @@
     align-items: center;
     background: #fff;
     border-radius: 8px;
-    box-shadow: 0 20px 32px -12px rgba(0, 0, 0, .6);
+    box-shadow: 0 20px 32px -12px rgba(0, 0, 0, 0.6);
     display: flex;
     height: 40px;
     justify-self: center;
@@ -87,7 +88,7 @@
   align-items: center;
   background: #fff;
   border-radius: 28px;
-  box-shadow: 0 20px 32px -12px rgba(0, 0, 0, .6);
+  box-shadow: 0 20px 32px -12px rgba(0, 0, 0, 0.6);
   display: flex;
   justify-self: center;
   height: 128px;
@@ -98,7 +99,7 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding: 0 100px;
+  padding: 100px 100px 0;
   width: 100%;
 }
 
@@ -130,13 +131,12 @@
 }
 
 .Title {
-  max-height: 64px;
+  max-height: 128px;
 
   &Text {
     font-size: 40px;
-    letter-spacing: .7px;
+    letter-spacing: 0.7px;
     line-height: 64px;
     overflow: hidden;
   }
-
 }
