--- a/src/template/templates/Template7/styles/mobile.scss
+++ b/src/template/templates/Template7/styles/mobile.scss
@@ -2,7 +2,6 @@
   &Variant {
     &Mobile {
       .About {
-        align-items: flex-start;
         margin: 60px 0;
 
         &List {
@@ -124,6 +123,7 @@
         }
 
         &Grid {
+          background: none;
           display: grid;
           margin: 20px 0;
 
