--- a/src/components/Form/components/Field.scss
+++ b/src/components/Form/components/Field.scss
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: center;
     margin: 0 8px 0 0;
+    position: relative;
 
     &:after {
       height: 8px;
@@ -34,7 +35,7 @@
     &:before {
       box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
       height: 18px;
-      opacity: .2;
+      opacity: 0.2;
       position: relative;
       width: 18px;
       z-index: 1;
@@ -63,7 +64,7 @@
   display: block;
   font-size: 12px;
   font-weight: 600;
-  letter-spacing: .6px;
+  letter-spacing: 0.6px;
   text-transform: uppercase;
 
   &:hover {
@@ -75,8 +76,8 @@
   color: #7e7acc;
   font-size: 12px;
   font-weight: 600;
-  letter-spacing: .6px;
-  transition: all .2s;
+  letter-spacing: 0.6px;
+  transition: all 0.2s;
 
   &Is {
     &Ends {
