--- a/src/views/Main/components/User.scss
+++ b/src/views/Main/components/User.scss
@@ -20,12 +20,12 @@
 .Dropdown {
   background: #ffffff;
   border-radius: 4px;
-  box-shadow: 0 10px 40px 0 rgba(126, 122, 204, .12);
+  box-shadow: 0 10px 40px 0 rgba(126, 122, 204, 0.12);
   opacity: 0;
   overflow: hidden;
   position: absolute;
   transform: translateY(20px);
-  transition: all .2s;
+  transition: all 0.2s;
   visibility: hidden;
   width: 186px;
 
@@ -41,7 +41,7 @@
     background: #f2f2f2;
     border-radius: 2px;
     height: 2px;
-    letter-spacing: .4px;
+    letter-spacing: 0.4px;
     margin: 6px 0 0;
     overflow: hidden;
     position: relative;
@@ -59,6 +59,7 @@
   &Title {
     color: #c8cbd0;
     font-size: 12px;
+    text-align: center;
   }
 }
 
@@ -68,12 +69,12 @@
   display: flex;
   font-size: 12px;
   height: 20px;
-  letter-spacing: .4px;
+  letter-spacing: 0.4px;
   text-decoration: none;
 
   &:active {
     color: var(--color-primary);
-    opacity: .8;
+    opacity: 0.8;
 
     .LinkIcon {
       background: var(--color-primary);
@@ -94,7 +95,7 @@
 
   &Is {
     &Active {
-      color: var(--color-primary);;
+      color: var(--color-primary);
       pointer-events: none;
     }
   }
@@ -141,15 +142,15 @@
     font-weight: 500;
     height: 100%;
     justify-content: center;
-    letter-spacing: .4px;
+    letter-spacing: 0.4px;
     margin: 0;
-    opacity: .8;
+    opacity: 0.8;
     padding: 0;
-    transition: all .2s;
+    transition: all 0.2s;
     width: 100%;
 
     &:active {
-      opacity: .6;
+      opacity: 0.6;
     }
 
     &:hover:not(:active) {
@@ -158,10 +159,18 @@
   }
 }
 
+.Pro {
+  border-radius: 20px;
+  font-size: 11px;
+  height: 20px;
+  margin: 12px 0 0;
+}
+
 .Status {
   color: var(--color-primary);
   font-size: 12px;
-  letter-spacing: .4px;
+  letter-spacing: 0.4px;
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -175,7 +184,7 @@
     display: flex;
     font-family: inherit;
     font-size: 14px;
-    letter-spacing: .1px;
+    letter-spacing: 0.1px;
     padding: 12px 4px;
 
     &:after {
